--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,13 @@ jobs:
       - name: Unzip code
         run: |
           unzip king-tv.zip -d ./
-          # Si los archivos están dentro de una carpeta llamada king-tv, los sacamos
           if [ -d "king-tv" ]; then mv king-tv/* ./; fi
+
+      - name: Setup Java 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'zulu'
+          java-version: '17'
 
       - name: Setup Node
         uses: actions/setup-node@v4
