--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,32 +20,31 @@ jobs:
         with:
           node-version: 20
 
-      - name: Unzip and Prepare
+      - name: Prepare Files
         run: |
           unzip king-tv.zip -d ./
           if [ -d "king-tv" ]; then mv king-tv/* ./; fi
-          rm -rf android  # Borramos carpetas viejas si existen
+          rm -rf android node_modules package-lock.json
 
-      - name: Install and Build Web
+      - name: Install and Build
         run: |
-          npm install
+          npm install --legacy-peer-deps
           npm run build --if-present
           mkdir -p dist
-          # Si no hay build, creamos uno de prueba para que no falle
-          if [ ! -d "dist" ] || [ -z "$(ls -A dist)" ]; then echo "<html></html>" > dist/index.html; fi
+          if [ ! -f "dist/index.html" ]; then echo "<html></html>" > dist/index.html; fi
 
-      - name: Add Android Platform
+      - name: Capacitor Setup
         run: |
           npm install @capacitor/core @capacitor/cli @capacitor/android
-          npx cap init "King TV" com.kingtv.app --web-dir dist || true
+          npx cap init "King TV" com.kingtv.app --web-dir dist --confirm
           npx cap add android
           npx cap copy android
 
-      - name: Build APK
+      - name: Build Final APK
         run: |
           cd android
           chmod +x gradlew
-          ./gradlew assembleDebug --no-daemon
+          ./gradlew assembleDebug --stacktrace --no-daemon
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
