--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,12 +38,14 @@ jobs:
           npm install @capacitor/core @capacitor/cli @capacitor/android
           npx cap init "King TV" com.kingtv.app --web-dir dist
           npx cap add android
+          npx cap copy android
 
-      - name: Final Build APK
+      - name: Build Final APK
         run: |
           cd android
           chmod +x gradlew
-          ./gradlew assembleDebug --no-daemon
+          # Usamos un comando especial para ignorar conflictos de versiones
+          ./gradlew assembleDebug -Pandroid.useAndroidX=true -Pandroid.enableJetifier=true --no-daemon
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
