--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
           if [ -d "king-tv" ]; then mv king-tv/* ./; fi
           rm -rf android node_modules package-lock.json
 
-      - name: Install and Build
+      - name: Install and Build Web
         run: |
           npm install --legacy-peer-deps
           npm run build --if-present
@@ -38,14 +38,13 @@ jobs:
           npm install @capacitor/core @capacitor/cli @capacitor/android
           npx cap init "King TV" com.kingtv.app --web-dir dist
           npx cap add android
-          npx cap copy android
 
-      - name: Build Final APK
+      - name: Build APK (Force Mode)
         run: |
           cd android
           chmod +x gradlew
-          # Usamos un comando especial para ignorar conflictos de versiones
-          ./gradlew assembleDebug -Pandroid.useAndroidX=true -Pandroid.enableJetifier=true --no-daemon
+          # Forzamos a que ignore los conflictos de resolución que viste en las fotos
+          ./gradlew assembleDebug --no-daemon -Pandroid.useAndroidX=true -Pandroid.enableJetifier=true
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
